@@ -5,8 +5,6 @@ error.o : io_global.o
 error.o : parallel_include.o
 etsf_error.o : io_global.o
 fft_scalar.o : kind.o
-files.o : io_global.o
-files.o : mp.o
 files.o : parser.o
 input_from_file.o : io_global.o
 input_from_file.o : mp.o
